[gd_scene load_steps=3 format=3 uid="uid://ddaini3nj53wa"]

[ext_resource type="Script" path="res://scripts/menu/menu.gd" id="1_g0wvt"]
[ext_resource type="Theme" uid="uid://c2f6p6bex2d8r" path="res://other/theme.tres" id="2_e0rc5"]

[node name="Controls and Instructions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0wvt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 503.0
offset_bottom = 301.0
scale = Vector2(0.516935, 0.516935)
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 18.0
offset_top = 8.0
offset_right = 386.0
offset_bottom = 190.0
scale = Vector2(0.612869, 0.662638)
theme = ExtResource("2_e0rc5")
text = "~ Controls and Instructions ~

- WASD / Arrow Keys --> Movement
- Left Mouse Button --> Shoot
- E Key --> Interact / Pick Up
- I Key --> Open/Close Inventory
- M Key --> Open/Close Map
- P Key --> Pause/Resume Game

Lit fires regenerate Health and Energy."

[node name="Fullscreen" type="Button" parent="CanvasLayer"]
offset_left = 131.0
offset_top = 129.0
offset_right = 199.0
offset_bottom = 160.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2_e0rc5")
text = "FULLSCREEN"

[node name="Sound" type="Button" parent="CanvasLayer"]
offset_left = 192.449
offset_top = 129.0
offset_right = 260.449
offset_bottom = 160.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2_e0rc5")
text = "SOUND"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_left = 18.3196
offset_top = 128.672
offset_right = 156.32
offset_bottom = 159.672
scale = Vector2(0.500898, 0.500898)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e0rc5")
text = "BACK"

[connection signal="pressed" from="CanvasLayer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="CanvasLayer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
